Prevent hamburger menu hiding on small screens (ref: viewport width < 768 px) (#364)
* 🐛 Add id to hamburger menu button fro small screen and replace isMobile() with a css media query

* Move style #g3w-small-screen-hamburger-sidebar css rules from App.vue to app.less using less variable  @screen-xs-max.
Add @media query to g3w-sidebar to hide sidebar-aside-toggle

* 🐛 Remove isMobile check and leave @media query to hide and show sidebar-aside-toggle accord

* prevent geocoding control overlap on mobile

* move css rule from `app.less` into `g3w-header.less`

* same left padding for `.logo-wrapper` (mobile and desktop)

---------

--- a/src/assets/style/less/admin-lte2-less/header.less
+++ b/src/assets/style/less/admin-lte2-less/header.less
@@ -83,6 +83,7 @@
     background-color: transparent;
     background-image: none;
     padding: @navbar-padding-vertical 10px 14px 10px;
+    margin-left: 5px;
     //Add the fontawesome bars icon
     &:hover {
       color: #fff;
